updated some docs

--- a/notebooks/TwilioBasics.ipynb
+++ b/notebooks/TwilioBasics.ipynb
@@ -10,16 +10,29 @@
     "\r\n",
     "Next, you will need to save your account Sid and auth token, found on the home screen of the Twilio console, to your environment variables. If you are unsure of how to do this, then you can follow the steps in this handy [blog](https://www.twilio.com/blog/2017/01/how-to-set-environment-variables.html).\r\n",
     "\r\n",
+    "*Note: If you are running this notbook from MyBinder.org you will need to enter your account Sid and auth token below as environment variables won't work*\r\n",
+    "\r\n",
     "Once you have your account set up, it's time to purchase an SMS and voice enabled [Twilio number](https://www.twilio.com/console/phone-numbers/search).\r\n",
-    "You can then add your Twilio number and your own mobile telephone number to the variables `twilioNumber` and `myNumber` respectively below.\r\n",
-    "\r\n"
+    "You can then add your Twilio number and your own mobile telephone number to the variables `twilioNumber` and `myNumber` respectively below.\r\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "account sid: ACa3417e6a7ea786e5cb6267d3503a65d2"
+     },
+     "metadata": {
+      "transient": {
+       "display_id": "58d940f6-0ffa-4d68-b801-30bca162fd4f"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "var accountSid = Environment.GetEnvironmentVariable(\"ACCOUNT_SID\");\r\n",
     "var authToken = Environment.GetEnvironmentVariable(\"AUTH_TOKEN\");\r\n",
